k8s/middle/radondb-mysql-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mysql-system
  name: mysql-system
