k8s/middle/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
spec:
  containers:
    - name: busybox
      image: busybox:1.28.4  #最新版的nslookup有点问题，因此这里指定版本
      command:  #这里使用命令夯住busybox,不然它执行完一次就completed了
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
