k8s/middle/mysql-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mysql-system
  name: mysql-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-master
  name: mysql-master-nodeport
  namespace: mysql-system
spec:
  type: NodePort
  ports:
    - name: mysql-3306
      nodePort: 30202
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql-master
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-master
  name: mysql-master
  namespace: mysql-system
spec:
  clusterIP: None
  ports:
    - name: mysql-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql-master
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql-master
  name: mysql-master
  namespace: mysql-system
spec:
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: mysql-master
  serviceName: mysql-master
  template:
    metadata:
      labels:
        app: mysql-master
    spec:
      restartPolicy: Always
      containers:
        - name: mysql
          image: mariadb:10.8.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql-3306
              containerPort: 3306
              protocol: TCP
          resources:
            limits:
              cpu: '4'
              memory: 10Gi
            requests:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - name: mysql-conf
              mountPath: /etc/mysql
            - name: mysql-data
              mountPath: /var/lib/mysql
              subPath: mysql
      volumes:
        - name: mysql-conf
          configMap:
            defaultMode: 0420
            name: mysql-master-conf
            optional: false
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mysql-data
        namespace: mysql-system
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
        storageClassName: alicloud-nas-259a44a286
