k8s/middle/redis-cluster-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-cluster
  name: redis-cluster
  namespace: redis-system
spec:
  clusterIP: None
  ports:
    - name: redis-6379
      port: 6379
      protocol: TCP
      targetPort: 6379
    - name: redis-16379
      port: 16379
      protocol: TCP
      targetPort: 16379
  selector:
    app: redis-cluster
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: redis-cluster
  name: redis-cluster
  namespace: redis-system
spec:
  podManagementPolicy: OrderedReady
  replicas: 6
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis-cluster
  serviceName: redis-cluster
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      restartPolicy: Always
      containers:
        - name: redis-cluster
          image: redis:7.0.1
          imagePullPolicy: IfNotPresent
          command: ["redis-server"]
          args:
            - /etc/redis/redis.conf
            - --cluster-announce-ip
            - $(POD_IP)
          ports:
            - name: redis-6379
              containerPort: 6379
              protocol: TCP
            - name: redis-16379
              containerPort: 16379
              protocol: TCP
          volumeMounts:
            - name: redis-conf
              mountPath: /etc/redis
            - name: redis-data
              mountPath: /var/lib/redis
              subPathExpr: $(POD_NAME)
      volumes:
        - name: redis-conf
          configMap:
            defaultMode: 0644
            name: redis-cluster-cm
            optional: false
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: redis-data
        namespace: redis-system
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
        storageClassName: alicloud-nas-extreme-02f105aa
