k8s/middle/nacos-cluster-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: nacos-system
  name: nacos-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nacos-iwindplus-com
  namespace: nacos-system
spec:
  ingressClassName: nginx
  rules:
    - host: nacos.iwindplus.com
      http:
        paths:
          - backend:
              service:
                name: nacos-cluster
                port:
                  number: 8848
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nacos.iwindplus.com
      secretName: iwindplus-com-cert
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nacos
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: nacos-cluster
  namespace: nacos-system
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nacos
  name: nacos-server
  namespace: nacos-system
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nacos
  serviceName: nacos-cluster
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - nacos
                topologyKey: kubernetes.io/hostname
              weight: 100
      restartPolicy: Always
      containers:
        - env:
          - name: TZ
            value: Asia/Shanghai
          - name: MYSQL_SERVICE_HOST
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: mysql.host
          - name: MYSQL_SERVICE_DB_NAME
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: mysql.db.name
          - name: MYSQL_SERVICE_PORT
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: mysql.port
          - name: MYSQL_SERVICE_USER
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: mysql.user
          - name: MYSQL_SERVICE_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: mysql.password
          - name: MODE
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: nacos.server.mode
          - name: NACOS_REPLICAS
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: nacos.server.replicas
          - name: NACOS_SERVER_PORT
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: nacos.server.port
          - name: PREFER_HOST_MODE
            value: "hostname"
          - name: NACOS_SERVERS
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: nacos.server.list
          - name: JAVA_OPTS
            valueFrom:
              configMapKeyRef:
                name: nacos-config
                key: nacos.server.javaOpts
          image: nacos/nacos-server:v2.1.2
          imagePullPolicy: IfNotPresent
          name: nacos
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
            - containerPort: 7848
              name: old-raft-rpc
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: "500m"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /home/nacos/plugins/peer-finder
              subPath: peer-finder
            - name: data
              mountPath: /home/nacos/data
              subPath: data
            - name: data
              mountPath: /home/nacos/logs
              subPath: logs
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
        namespace: nacos-system
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
        storageClassName: alicloud-nas-extreme-02f105aa
