k8s/middle/rabbitmq-cluster-deploy.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rabbitmq-iwindplus-com
  namespace: rabbitmq-system
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.iwindplus.com
      http:
        paths:
          - backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - rabbitmq.iwindplus.com
      secretName: iwindplus-com-cert
