k8s/middle/seata-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: seata-system
  name: seata-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: seata-iwindplus-com
  namespace: seata-system
spec:
  ingressClassName: nginx
  rules:
    - host: seata.iwindplus.com
      http:
        paths:
          - backend:
              service:
                name: seata-server
                port:
                  number: 7091
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - seata.iwindplus.com
      secretName: iwindplus-com-cert
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seata-server
  name: seata-server
  namespace: seata-system
spec:
  clusterIP: None
  ports:
    - name: seata-client
      port: 7091
      targetPort: 7091
    - name: seata-server
      port: 8091
      targetPort: 8091
  selector:
    app: seata-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seata-server
  namespace: seata-system
  labels:
    app: seata-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seata-server
  template:
    metadata:
      labels:
        app: seata-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - app
              weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - seata-server
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
          - name: TZ
            value: Asia/Shanghai
          name: seata-server
          image: seataio/seata-server:1.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7091
              name: client
            - containerPort: 8091
              name: server
          volumeMounts:
            - name: seata-resources
              mountPath: /seata-server/resources/application.yml
              subPath: application.yml
      volumes:
        - name: seata-resources
          configMap:
            defaultMode: 0420
            name: seata-conf
            optional: false
