k8s/middle/sentinel-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: sentinel-system
  name: sentinel-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: sentinel-iwindplus-com
  namespace: sentinel-system
spec:
  ingressClassName: nginx
  rules:
    - host: sentinel.iwindplus.com
      http:
        paths:
          - backend:
              service:
                name: sentinel-server
                port:
                  number: 8880
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sentinel.iwindplus.com
      secretName: iwindplus-com-cert
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentinel-server
  name: sentinel-server
  namespace: sentinel-system
spec:
  clusterIP: None
  ports:
    - name: sentinel-client
      port: 8880
      targetPort: 8880
    - name: sentinel-server
      port: 8720
      targetPort: 8720
  selector:
    app: sentinel-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-server
  namespace: sentinel-system
  labels:
    app: sentinel-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentinel-server
  template:
    metadata:
      labels:
        app: sentinel-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - app
              weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - sentinel-server
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
            - name: TZ
              value: Asia/Shanghai
            - name: JAVA_OPTS
              value: -Xloggc:/root/logs/csp/gc_%t.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=logs -Dsentinel.dashboard.auth.username=sentinel -Dsentinel.dashboard.auth.password=zaq12wsx -Dserver.port=8880 -Dcsp.sentinel.api.port=8720
          name: sentinel-server
          image: registry.cn-shenzhen.aliyuncs.com/iwindplus/sentinel:1.8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8880
              name: client
            - containerPort: 8720
              name: server
